new component code in templates

--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,7 +1,5 @@
 {template .main}
 <div class="@outer-container">
-	<DataTableTabPanel aaa="222">
-		<i>333</i>
-	</DataTableTabPanel>
+	<DataTableTabPanel/>
 	{$::aaa}
 </div>
