--- a/www/builder/sources/components/DataTable/Rows/DataTableStandartRow/DataTableStandartRow.template
+++ b/www/builder/sources/components/DataTable/Rows/DataTableStandartRow/DataTableStandartRow.template
@@ -41,6 +41,6 @@
 	
 	</div>
 	{if ~fragments}
-		<component class="DataTableFragmets" data="{~fragments}"/>
+		<DataTableFragmets data="{~fragments}"/>
 	{/if}
 </a>
