--- a/www/builder/sources/controls/Tags/KeywordTags/ExcludeKeywordTags/ExcludeKeywordTags.template
+++ b/www/builder/sources/controls/Tags/KeywordTags/ExcludeKeywordTags/ExcludeKeywordTags.template
@@ -4,10 +4,10 @@
 <div class="@top">
 	<span class="@select-button" data-index="1">
 		{$opt1}
-		<component class="PopupSelect" cmpid="opt1" arg-options="{#wordExcludeOptions}" title="{@findExcludes}" onChange="onChangeOption"/>
+		<PopupSelect cmpid="opt1" arg-options="{#wordExcludeOptions}" title="{@findExcludes}" onChange="onChangeOption"/>
 	</span>
 	<:topButtons/>
 </div>
 
 {template .input}
-<component class="AutoComplete" arg-placeholder="{@enterKeywords}" onFocus="!focus" onEnter="onEnter"/>
+<AutoComplete arg-placeholder="{@enterKeywords}" onFocus="!focus" onEnter="onEnter"/>
