--- a/www/builder/sources/dialogs/Support/Support.template
+++ b/www/builder/sources/dialogs/Support/Support.template
@@ -1,5 +1,5 @@
 {template .content}
-<form class="SupportForm"/>
+<SupportForm/>
 <div class="standart-button order-support" onClick="onOrderCallButtonClick">
 	{@toOrderCall}
 </div>
