--- a/www/builder/sources/views/Main/Main.template
+++ b/www/builder/sources/views/Main/Main.template
@@ -6,23 +6,23 @@
 					<div class="mainpage-left-column-title">
 						{@personal}
 					</div>
-					<component class="UserInfo"/>
+					<UserInfo/>
 					<div class="mainpage-leftcolumn-title bold">
 						{@calendar}
 						<::tooltip args="{#calendarTooltip}"/>
 					</div>
-					<component class="FavoritesCalendar"/>
+					<FavoritesCalendar/>
 				</div>
 			</td>
 			<td class="mainpage-content-column">
-				<component class="TabPanel" args="{#mainPageTabs}"/>
+				<TabPanel args="{#mainPageTabs}"/>
 				<div class="mainpage-content">
 					<div class="tab-content">
-						<component class="FilterStatistics" args="{#mainPageFilterStat}"/>
+						<FilterStatistics args="{#mainPageFilterStat}"/>
 					</div>
 					<div class="tab-content">
-						<component class="FilterSubscriptionOptions"/>
-						<component class="FilterSubscription"/>
+						<FilterSubscriptionOptions/>
+						<FilterSubscription/>
 					</div>
 					<div class="tab-content">
 						11111111
