--- a/www/builder/sources/ui/Form/Form.template
+++ b/www/builder/sources/ui/Form/Form.template
@@ -1,4 +1,4 @@
-<forma class="app-form-controls{~className?' '+~className}" method="{~method}" action="{~action}" data-ajax="{~ajax?1}" data-iframe="{~iframe?1}" scope>
+<form class="app-form-controls{~className?' '+~className}" method="{~method}" action="{~action}" data-ajax="{~ajax?1}" data-iframe="{~iframe?1}" scope>
 	<:content/>
 	{foreach ~controls as &control}
 		<FormField args="{&control}"/>
@@ -6,4 +6,4 @@
 	{if ~submit}
 		<Submit props="{~submit}" onSubmit="onSubmit"/>
 	{/if}	
-</forma>
+</form>
