--- a/www/builder/sources/ui/AutoComplete/AutoComplete.template
+++ b/www/builder/sources/ui/AutoComplete/AutoComplete.template
@@ -1,17 +1,17 @@
 {template .main}
 <div class="@ input-container" scope>
-	<input type="text" placeholder="{~placeholder}" eid="input">
+	<input as="input" type="text" placeholder="{~placeholder}">
 	<:content/>
-	<div class="@variants{$active?' shown'}" eid="variants">
+	<div as="variants" class="@variants{$active?' ->> shown'}">
 		<div class="@variants-inner">
 			{foreach $variants as &i => &variant}
-				<:variant data="{&variant}" index="{&i}"/>
+				<:variant props="{&variant}" index="{&i}"/>
 			{/foreach}
 		</div>
 	</div>
 </div>
 
 {template .variant}
-<div class="@variant" data-index="{~index}" data-value="{~data['name']}">
-	{~data['name']}
+<div class="@variant" data-index="{~index}" data-value="{~name}">
+	{~name}
 </div>
