--- a/www/builder/sources/views/Search/Search.template
+++ b/www/builder/sources/views/Search/Search.template
@@ -1,4 +1,4 @@
 <div class="view-content{$expanded?' ->>form-expanded'}" scope>
-	<TenderSearchForm cmpid="form" onExpand="onFormExpand"/>
-	<TenderDataTable cmpid="datatable"/>
+	<TenderSearchForm as="form" onExpand="onFormExpand"/>
+	<TenderDataTable as="datatable"/>
 </div>
