Dialoger, Dialog.show, deleted ++>Dialog

--- a/www/builder/sources/dialogs/OrderCall/OrderCall.template
+++ b/www/builder/sources/dialogs/OrderCall/OrderCall.template
@@ -1,5 +1,7 @@
 {template .content}
 <OrderCallForm/>
+
+{template .buttons}
 <div class="standart-button order-support" onClick="onSupportButtonClick">
 	{@toSupport}
 </div>
