--- a/www/builder/sources/controls/Input/Input.template
+++ b/www/builder/sources/controls/Input/Input.template
@@ -1,1 +1,1 @@
-<input type="{$type}" name="{$name}" placeholder="{$placeholder}" value="{$value}" onInput="onChange" readonly="{$enabled?'readonly'}" accept="{$accept}"/>
+<input type="{~type}" name="{~name}" placeholder="{$placeholder}" value="{$value}" onInput="onChange" readonly="{!$enabled?'readonly'}" accept="{~accept}"/>
