--- a/www/builder/config.json
+++ b/www/builder/config.json
@@ -5,16 +5,15 @@
 	"jsFolder"    : "js",
 	"cssFolder"   : "css",
 	"imagesFolder": "images",
+	"fontsFolder" : "fonts",
 	"compiledJs"  : "base",
 	"compiledCss" : "styles",
 	"container"   : "app-view-container",
 
 	"entry"       : "App",
-	"scope"       : "./sources",
-	"core"        : "./core",
-	"tests"       : "./tests",
-	"blanks"      : "./blanks",
-	"scripts"     : "./scripts",
+	"scope"       : "sources",
+	"tests"       : "tests",
+	"scripts"     : "scripts",
 	"views"       : "views",	
 	"pathToApi"   : "api",
 	
