--- a/www/builder/sources/menues/TopMenu/TopMenu.template
+++ b/www/builder/sources/menues/TopMenu/TopMenu.template
@@ -1,6 +1,6 @@
-<div class="app-top-menu" scope>
-	<div class="app-top-menu-inner">
-		<a href="#main" class="app-top-menu-logo"></a>
+<div class="@" scope>
+	<div class="@inner">
+		<a href="#main" class="@logo"></a>
 		<a href="#main" role="main">Главная</a>
 		<a href="#search" role="search">Поиск</a>
 		<a href="#favorite" role="favorite">Избранное</a>
