template parser + level

--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -7,6 +7,10 @@
 			<div>{$bbb}</div>
 			<Reason>
 				<div>{$bbb}</div>
+				{switch $ddd}
+					{case 3}
+						ITS 2
+				{/switch}
 			</Reason>
 		</Reason>
 	</::hello>
