--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -4,16 +4,15 @@
 	{$:aaa}
 	<::hello>
 		<Reason>
-			<div>{$bbb}</div>
-			<Reason>
-				<div>{$bbb}</div>
-				{if}
-					{case $ddd == 2}
-						ITS 2
-					{case $ddd == 3}
-						ITS 3
-				{/if}
-			</Reason>
+			<div>
+				{$bbb}
+			</div>			
+			{if}
+				{case $ddd == 2}
+					ITS 2
+				{case $ddd == 3}
+					ITS 3
+			{/if}			
 		</Reason>
 	</::hello>
 </div>
