--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -7,12 +7,16 @@
 			<div>
 				{$bbb}
 			</div>			
+			{let &ddd=3}
 			{if}
 				{case $ddd == 2}
 					ITS 2
-				{case ~ddd == 3}
+				{/case}
+				
+				{case &ddd == 3}
 					ITS 3
-			{/if}			
+				{/case}				
+			{/if}
 		</Reason>
 	</::hello>
 </div>
