--- a/www/builder/config.json
+++ b/www/builder/config.json
@@ -70,7 +70,5 @@
 		"adminAccess": 100
 	},
 
-	"pathToDictionary": "dictionary/get.php",
-	"tooltipClass": "TooltipPopup",
-	"tooltipApi": "tooltip/get.php"
+	"pathToDictionary": "dictionary/get.php"
 }
