--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,9 +1,7 @@
 {template .main}
-{if $aaa == 5}
-	<span/>
-{else}
-	<div/>
-{/if}
+{foreach ~a as &i => &f}
+	<div>{$f}</div>
+{/foreach}
 <div class="@outer-container" onCLick="handleClick" if="{$a==2}" else="1111">
 	{let &a = 2}
 
