--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,5 +1,13 @@
 {template .main}
 <div class="@outer-container" onCLick="handleClick">
-	<a><div>
+{loading}
+
+{switch}
+	{case}
+		
+	{/case}
+	{default}
+
+	{/default}
+{/switch}
 </div>
-</a>
