--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,6 +1,8 @@
 {template .main}
 <div class="@outer-container" onCLick="handleClick">
 	<ul>
+	{foreach $a as &i}
+	{/foreach}
 	{from &a = .a($s) to 10 step 2}
 		<li>
 			{&i}
