--- a/www/builder/config.json
+++ b/www/builder/config.json
@@ -70,5 +70,6 @@
 		"adminAccess": 100
 	},
 
-	"pathToDictionary": "dictionary/get.php"
+	"pathToDictionary": "dictionary/get.php",
+	"tooltipClass": "TooltipPopup"
 }
