--- a/www/bushstas/builder/config.json
+++ b/www/bushstas/builder/config.json
@@ -15,7 +15,7 @@
 	"tests"       : "tests",
 	"scripts"     : "scripts",
 	"views"       : "views",	
-	"pathToApi"   : "/bushstas-api",
+	"pathToApi"   : "/bushstas-api/",
 	"singleLoad"  : true,
 	"loadData"    : true,
 	
@@ -71,5 +71,38 @@
 	},
 
 	"pathToDictionary": "dictionary/get.php",
-	"tooltipClass": "TooltipPopup"
+	"tooltipClass": "TooltipPopup",
+	"apiConfig": {
+		"user": {
+			"get": "user/get.php"
+		},
+		"filters": {
+			"load": "filters/get.php",
+			"save": "filters/add.php",
+			"set": "filters/set.php",
+			"subscribe": "filters/subscribe.php"
+		},
+		"support": {
+			"send": "support/send.php"
+		},
+		"orderCall": {
+			"send": "orderCall/send.php"
+		},
+		"favorites": {
+			"get": "favorites/get.php",
+			"add": "favorites/add.php",
+			"remove": "favorites/remove.php"
+		},
+		"filterStat": {
+			"load": "filters/count.php"
+		},
+		"settings": {
+			"subscr": "settings/get.php",
+			"set": "settings/set.php"
+		},
+		"keywords": {
+			"get": "keywords/get.php",
+			"recommendations": "keywords/getRecommendations.php"
+		}
+	}
 }
